--- a/workshop2/report.tex
+++ b/workshop2/report.tex
@@ -180,7 +180,7 @@
     \item $^1T_2=\begin{bmatrix}
 
     \end{bmatrix}
-    $
+    $ Its just the matrix product as described above.
   \end{itemize}
 \end{enumerate}
 \end{document}
